--- a/py/ds/list.ipynb
+++ b/py/ds/list.ipynb
@@ -9,13 +9,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdc7637c-1b10-4d2f-88ad-75ae7823aa89",
+   "cell_type": "markdown",
+   "id": "55573fbf-e496-463c-8c39-3accda6c7cf3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# List Python - Interpreted Language - Line by Line "
+    "- List Python - Interpreted Language - Line by Line\n",
+    "- Run a line (Execute) - Shift + Enter"
    ]
   },
   {
@@ -24,9 +23,7 @@
    "id": "f3038aea-695f-4322-bfdc-7f9b3ed5192c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Run a line (Execute) - Shift + Enter"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -613,25 +610,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfcce3b6-6b0f-4bf0-87e4-3891a1a85ef2",
+   "cell_type": "markdown",
+   "id": "023dffa1-b20d-452d-b410-d364380b90fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## List Functions"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ce0d978c-9f16-4623-a4b4-b68f2c9618b3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__add__', '__class__', '__class_getitem__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort'] \t \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(list), '\\t ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "612af50b-b15d-4e47-9fb3-d5c54f59355d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n"
+     ]
+    }
+   ],
+   "source": [
+    "methods = [method for method in dir(list) if callable(getattr(list, method)) and not method.startswith('__')]\n",
+    "print(methods)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "612af50b-b15d-4e47-9fb3-d5c54f59355d",
+   "id": "708a343e-cead-4e0c-9379-bbe55b40878b",
    "metadata": {},
    "outputs": [],
    "source": []
