--- a/py/ds/list.ipynb
+++ b/py/ds/list.ipynb
@@ -18,12 +18,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3038aea-695f-4322-bfdc-7f9b3ed5192c",
+   "cell_type": "markdown",
+   "id": "3e2b1871-a048-45f8-b117-21d84bc000f6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- List is a type of DS with different data types being stored"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1bb03b6a-b7b2-431b-a74b-f09d954b900a",
    "metadata": {},
    "outputs": [],
@@ -45,30 +45,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7affc523-1a27-4b72-b908-6fda8d579e9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x  #list of numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "52a772f4-8182-49d9-8cf3-9277530fd1f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3158af8b-87d3-4046-a3fe-d62fcb193e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(x)"
    ]
@@ -83,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "18c7b27c-8526-4111-8f50-349f286c21e8",
    "metadata": {},
    "outputs": [],
@@ -95,20 +125,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "78469219-caa0-44da-9bea-830a451ccd4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(x1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cfe4a6dc-5a16-40ca-ad04-22157c7c6895",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 10, 15.67, 'Nayeema', 'PIIT', True, 45, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "print(x1)"
    ]
@@ -123,12 +172,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ee486528-51ab-4b88-b0d4-90ac4ba17640",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(x1)"
+    "len(x1)   #no of elements"
    ]
   },
   {
@@ -619,6 +679,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "ea2b5ac7-ed95-4f00-8485-f1fcb54f563f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dir(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "ce0d978c-9f16-4623-a4b4-b68f2c9618b3",
    "metadata": {},
@@ -637,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "612af50b-b15d-4e47-9fb3-d5c54f59355d",
    "metadata": {},
    "outputs": [
@@ -656,8 +726,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "708a343e-cead-4e0c-9379-bbe55b40878b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5ef25d32-053c-4bc5-a686-bee3c1cbd37f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e923e6a5-b057-4ad2-af02-bc2a7f719bd5",
    "metadata": {},
    "outputs": [],
    "source": []
