--- a/py/ds/list.ipynb
+++ b/py/ds/list.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "source": [
     "- List Python - Interpreted Language - Line by Line\n",
-    "- Run a line (Execute) - Shift + Enter"
+    "- Run a line (Execute) - Shift + Enter\n",
+    "- list is created with [ ] square bracket"
    ]
   },
   {
