--- a/sql/ImpExpSQL.ipynb
+++ b/sql/ImpExpSQL.ipynb
@@ -545,7 +545,7 @@
     }
    ],
    "source": [
-    "# Engine\n",
+    "# Engine - piuser#123\n",
     "engine = create_engine('mysql+pymysql://piuser:Pass%23123@localhost:3306/piit')\n",
     "print(engine)"
    ]
